# playground

./: .gitignore  README.md
rust/: Cargo.toml  repo.db
rust/playgit/: Cargo.toml
rust/playgit/src/: lib.rs
rust/playsqlit/: Cargo.toml
rust/playsqlit/src/: lib.rs
rust/src/: main.rs
rust/src/env_check/: mod.rs
rust/src/file_sys/: explore.rs  file.rs  mod.rs
rust/src/info/: mod.rs
web/iconfy/: package.json  pnpm-lock.yaml  vite.config.js
web/iconfy/src/: App.vue  main.js
web/node_js/: node_tests.js
web/node_js/github_graph_ql/: getInfo.js  package.json  pnpm-lock.yaml
web/vite_vue/: package.json  pnpm-lock.yaml  vite.config.js
web/vite_vue/src/: App.vue  main.js  style.css
web/vite_vue/src/components/: CodeMirrorTest.vue
